[package]
name = "xenforeignmemory"
version = "0.3.0"
authors = ["Mathieu Tarral <mathieu.tarral@protonmail.com>"]
edition = "2018"
description = "Safe bindings to xenforeignmemory"
readme = "README.md"
homepage = "https://github.com/Wenzel/xenforeignmemory"
repository = "https://github.com/Wenzel/xenforeignmemory"
license = "GPL-3.0-only"
keywords = ["xen", "xenforeignmemory"]
categories = ["api-bindings"]

[dependencies]
libloading = "0.8.6"
log = "0.4.26"
thiserror = "2.0.11"
xenforeignmemory-sys = "0.2.0"

[package.metadata.release]
# releases are managed by cargo release, but publication is done on the CI
# this metadata prevents a misuse when --skip-publish flag is missing from cargo
# release command line
publish = false
